--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "android/build.gradle",
     "dist/",
     "ios/Plugin/",
-    "CapacitorSecureStoragePlugin.podspec"
+    "CapacitorSecureStoragePlugin.podspec",
+    "Package.swift"
   ],
   "author": "martinkasa",
   "license": "MIT",
